AAE-46487 Fix the order of producer audit events is not preserved for multi-instance parallel async tasks (#2325)
* AAE-46487: Fix the order of producer audit events is not preserved for multi-instance parallel async tasks

* refactor FunctionRouterExecutorFactory to guarantee messages run strictly sequentially in the exact order they are submitted with backpressure

* Add transacted producer bindings test in runtime example

* clean up FunctionRouterExecutorFactory sonar warnings

* use milliseconds for the task timeout

* test: increase FunctionRouterExecutorFactory coverage

* style: apply pre-commit formatting for pre-checks

* update FunctionRouterExecutorFactoryTest to run faster with shorter timeouts

* harden FunctionRouterExecutorFactory task execution handler

* replace linked queue with ArrayBlockingQueue with fairness enable

* add executor terminating condition into task execution handler

* fix potential flaky test timeout

* make function router executor request timeout configurable

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>